- implement authentication - implement swagger - input validation